# reactos

./: README.md
drivers/storage/ide/atapi/: CMakeLists.txt  atapi.rc
drivers/storage/ide/uniata/: CMakeLists.txt  idedma.rc
